--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "author": "NhanNT",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "http-status": "^1.0.1",
+    "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.0.13",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
